<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GitHub API Client</string>

    <!--  GitHub Sponsors  -->
    <string name="text_git_hub_sponsors">Please sponsor this project on GitHub</string>
    <string name="url_git_hub_sponsors">https://github.com/sponsors/syslogic</string>

    <string name="button_user_repositories">User Repositories</string>
    <string name="button_org_repositories">Org Repositories</string>
    <string name="button_repository_search">Repository Search</string>

    <string name="title_account_authenticator">"GitHub API Client</string>
    <string name="summary_account_authenticator">Personal Access Token</string>

    <string name="title_application_settings">"Application Settings</string>
    <string name="summary_intent_account_settings">"Open the account settings</string>

    <string name="title_personal_access_token">Personal Access Token</string>
    <string name="summary_personal_access_token">Open Android Account Manager</string>
    <string name="summary_personal_access_token_alt">Open the Sync Settings</string>

    <string name="title_workspace_directory">Local Workspace Directory</string>
    <string name="summary_workspace_directory">@null</string>

    <string name="title_preference_show_repository_topics">Show Repository Topics</string>
    <string name="summary_preference_show_repository_topics">This permits to browse by topic</string>

    <string name="title_preference_debug_logging">Debug Logging</string>
    <string name="summary_preference_debug_logging">Enable verbose logging</string>

    <string name="menu_action_preferences">Preferences</string>
    <string name="menu_action_query_strings">Query Strings</string>
    <string name="menu_action_query_string_add">Add Query String</string>

    <string name="text_bookmarks">Bookmarks</string>
    <string name="text_edit_bookmark">Edit Bookmark</string>
    <string name="text_repositories">Repositories</string>
    <string name="text_forks">Forks</string>
    <string name="text_stargazers">Stargazers</string>
    <string name="text_watchers">Watchers</string>
    <string name="text_subscribers">Subscribers</string>
    <string name="text_networks">Networks</string>

    <string name="text_pager_offline">Device is offline</string>
    <string name="text_pager_loading">Loading page %1$d of %2$d</string>
    <string name="text_pager_loaded">Loaded page %1$d of %2$d</string>

    <string name="text_current_topic">Topic: %s</string>

    <string name="debug_token_auth">Authenticated with PAT as https://github.com/%1$s</string>
    <string name="debug_branch_list">%1$s has %2$d branches: %3$s</string>
    <string name="debug_branch_master">%1$s master branch index: %2$d</string>
    <string name="debug_network_present">Network connection is present</string>
    <string name="debug_network_absent">Network connection is absent</string>

    <string name="hint_auto_id">Auto ID</string>
    <string name="hint_home_button">Home Button</string>
    <string name="hint_query_string_title">Display Name</string>
    <string name="hint_query_string_search">Search Parameter</string>
    <string name="hint_query_string_condition">Condition</string>
    <string name="hint_query_string_operator">Comparison Operator</string>
    <string name="hint_query_string_operand">Comparison Value</string>
    <string name="hint_query_string_is_raw">Raw Query</string>

    <string name="text_cloning_repository">Cloning git repository…</string>
    <string name="text_button_browse">Browse</string>
    <string name="text_button_close">Close</string>

    <string name="text_repository_type">Type</string>
    <string name="text_sort_field">Sort Field</string>
    <string name="text_sort_order">Direction</string>

</resources>
