<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/title_application_settings">

        <Preference
            app:key="account_settings"
            app:title="@string/title_personal_access_token"
            app:summary="@string/summary_intent_account_settings"/>

        <Preference
            app:key="workspace_directory"
            app:title="@string/title_workspace_directory"
            app:summary="@string/summary_workspace_directory"/>

        <SwitchPreferenceCompat
            app:key="show_repository_topics"
            app:defaultValue="false"
            app:title="@string/title_preference_show_repository_topics"
            app:summary="@string/summary_preference_show_repository_topics"/>

        <SwitchPreferenceCompat
            app:key="debug_logging"
            app:defaultValue="false"
            app:title="@string/title_preference_debug_logging"
            app:summary="@string/summary_preference_debug_logging"/>

    </PreferenceCategory>

</PreferenceScreen>
