<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AuthenticatorActivity">

    <data>
        <variable name="token" type="java.lang.String" android:value=""/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_account_authenticator"
            android:text="@string/title_account_authenticator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/summary_account_authenticator"
            android:text="@string/summary_account_authenticator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1.00"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/personal_access_token"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_personal_access_token"
                    android:text='@{ token }'
                    android:gravity="start"
                    tools:text="ghp_"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/add_access_token"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_save_48"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
