<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.NavHostActivity">

    <data>
        <variable name="user" type="io.syslogic.github.api.model.User"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_home_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp">

        <include
            layout="@layout/toolbar_home_screen"
            android:id="@+id/toolbar_home_screen"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"/>

        <Space
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.50"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_user_repositories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="24dp"
                android:text="@string/button_user_repositories"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_repository_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="24dp"
                android:text="@string/button_repository_search"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.50"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:background="@color/cardview_light_background"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_git_hub_sponsors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/text_git_hub_sponsors"
                android:padding="12dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
