<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.NavHostActivity">

    <data>
        <variable name="item" type="io.syslogic.github.model.QueryString"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_query_string"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar_query_string"
                android:id="@+id/toolbar_query_string"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_margin="0dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:padding="0dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="0dp"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_auto_id"
                    android:text='@{"" + item.id }'
                    android:gravity="start"
                    tools:text="23"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_query_string_title"
                    android:text="@={ item.title }"
                    android:gravity="start"
                    tools:text="Android"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topic"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_query_string_topic"
                    android:text="@={ item.topic }"
                    android:gravity="start"
                    tools:text="topic:android"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/condition"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_query_string_condition"
                    android:text="@={ item.condition }"
                    android:gravity="start"
                    tools:text="pushed"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/operator"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_query_string_operator"
                    android:text="@={ item.operator }"
                    android:gravity="start"
                    tools:text=">"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/operand"
                    android:inputType="numberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_query_string_operand"
                    android:text='@={"" + item.operand }'
                    android:gravity="start"
                    tools:text="30"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{ item.toQueryString }"/>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
