<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DetailActivity">

    <!--suppress AndroidUnknownAttribute -->
    <data class=".databinding.RepositoryFragmentBinding">
        <variable name="repository" type="io.syslogic.github.model.Repository"/>
    </data>

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewflipper_offline">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_repository"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/forkCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:text='@{""+repository.forkCount}'
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:labelFor="@id/forkCount"
                        android:text="@string/text_forks"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/watcherCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:text='@{""+repository.watcherCount}'
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:labelFor="@id/watcherCount"
                        android:text="@string/text_watchers"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/subscriberCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:text='@{""+repository.subscriberCount}'
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:labelFor="@id/watcherCount"
                        android:text="@string/text_subscribers"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/networkCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:text='@{""+repository.networkCount}'
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start"
                        android:labelFor="@id/networkCount"
                        android:text="@string/text_networks"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <WebView
                android:id="@+id/webview_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <include
            android:id="@+id/layout_offline"
            layout="@layout/fragment_offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"/>

    </ViewFlipper>

</layout>